# raytracingLearning

./: .gitignore  CMakeLists.txt  README.md  build_simple.sh  simple_test.cpp
.bmad-core/: install-manifest.yaml
.github/workflows/: cross-platform-build.yml
.ignore/: brainstorming-session-results.md  brief.md  educational_assessment_framework.md  educational_code_review_guidelines.md  front-end-spec.md  instructor_guidelines.md
assets/: cook_torrance_showcase.scene  showcase_scene.scene  simple_scene.scene
docs/: architecture.md  implementation-decisions.md  prd.md
docs/architecture/: components.md  core-workflows.md  data-models.md  deployment-architecture.md  enhanced-architecture-with-visual-learning-features.md  error-handling-strategy.md  final-architecture-summary-and-next-steps.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  progressive-dependency-management-strategy.md  refined-api-specification-educational-clarity-focus.md  risk-mitigated-project-structure-simplified-educational-focus.md  scene-data-format-specifications.md  security-and-performance.md  tech-stack.md  testing-strategy.md
docs/prd/: checklist-results-report.md  epic-1-foundation-mathematical-core.md  epic-2-visual-foundation-multi-ray-rendering.md  epic-3-cook-torrance-microfacet-theory-implementation.md  epic-4-openpbr-material-system-educational-completion-point.md  epic-5-materialx-integration-usd-pipeline.md  epic-6-apple-silicon-optimization-advanced-features.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.project-setup-build-system.md  1.2.core-mathematical-foundation.md  1.3.single-ray-lambert-brdf-implementation.md  1.4.mathematical-validation-and-documentation.md  2.1.image-generation-and-pixel-sampling.md  (+6 more)
src/: main.cpp
src/core/: camera.hpp  ray.hpp  (+9 more)
tests/: test_math_correctness.cpp
(+7 files in other folders)
